[11.15] released ...
* The compilation process was fixed to work without CPPFLAGS=-D_GNU_SOURCE on
  Linux/glibc again, although mremap() is not available then. It is therefore
  recommended to use CPPFLAGS=-D_GNU_SOURCE with Linux/glibc. (Bugreports by
  Stephen Isard, Laurens Blankers, Bob Tennent.)
* When an editor is invoked using ~e, ~v, 'edit', or 'visual', interrupts are
  no longer ignored in its process. With most editor implementations, this
  does not make any difference since they enable interrupts themselves again;
  however, traditional implementations of 'ed' do not.
* Since many versions of Linux do not correctly update the modification time
  of a file with mmap(), utime() is now called to force an update when the
  junk mail database is changed.
* When a malformed MIME multipart message is encountered that contains the
  boundary string on two immediately following lines, the second line is no
  longer treated as the begin of a new part.

[11.14] released 11/4/04
* A 'Z' command was introduced. It is similar to the 'z' command, but scrolls
  only to header groups that contain at least one new or flagged message. This
  is useful for reading large mailing lists.
* The attachment decoding functions have been rewritten. As a result, nail is
  now able to decrypt and display encrypted parts of multipart messages.
* For MIME messages of type 'multipart/alternative', only the text/plain part
  is displayed now if one is present with the 'print'-like commands. The
  'print-alternatives' variable can be set to print all parts, as it was
  done previously. The 'Print'-like commands always print all parts.
* The ~F and ~M escapes now cause all parts of MIME multipart messages to be
  included in the message being composed.
* A 'show' command was introduced to make the raw MIME-encoded message text
  visible.
* Modifications to messages made using the 'edit' and 'visual' commands do